<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoDecApp</string>
    <string name="btn_see_power_generated">See Power Generated</string>
    <string name="btn_see_power_used">See Power Used</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_power_generated">Power Generated</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_lighting">LightingActivity</string>
    <string name="title_activity_lighting_utils">LightingUtils</string>
    <string name="title_activity_power">PowerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="dash_title_power">Power</string>
    <string name="dash_title_lights">Lighting</string>
    <string name="dash_title_temp">Temperature</string>
    <string name="dash_title_insights">Insights</string>
    <string name="dash_default_light_count">0</string>
    <string name="dash_temp_inside">Inside</string>
    <string name="dash_temp_outside">Outside</string>
    <string name="dash_temp_general">In your area</string>
    <string name="dash_power_use_label">Usage</string>
    <string name="dash_power_gen_label">Generated</string>
    <string name="inside_temp_missing">No inside temperature available.</string>
    <string name="outside_temp_missing">No outside temperature available.</string>
    <string name="general_temp_missing">No general temperature available.</string>
    <string name="description">description</string>
    <string name="view_temp">View Temperature</string>
    <string name="view_humidity">View Humidity</string>
    <string name="temperature_title">Inside Temperature</string>
    <string name="humidity_title">Inside Humidity</string>
    <string name="title_activity_suggestions">SuggestionsActivity</string>
    <string name="title_activity_powergraph">powergraph</string>

    <string-array name="time">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="usegen">
        <item>Power Generated</item>
        <item>Power Used</item>
    </string-array>

    <string name="enter_pref_temp">Enter your preferred inside temperature (°F):</string>
    <string name="pref_temp">Your preferred temp is: </string>
    <string name="open_window">Open your windows</string>
    <string name="close_window">Close your windows</string>
    <string name="title_activity_power_used_room">PowerUsedRoomActivity</string>
    <string name="no_suggestions">No suggestions at this time.</string>
    <string name="trend_in_one_hour">Your inside temperature in 1 hour will be: </string>
    <string name="trend_decreasing_temp">Based on current trends, your inside temperature is decreasing.</string>
    <string name="trend_increasing_temp">Based on current trends, your inside temperature is increasing.</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
